Skip to content

crash in VLCProfileSelector::newProfile

I was just clicking around, not expecting anything. Reproducer may go like this:

rm -rfvi ~/.config/vlc
vlc ~/some/dir/*.mp3
<next>
<next>
<next>
<finish>
click on this playlist thing (without tooltip) in the upper right corner
right-click on a song that is not yet playing
select stream from the menu
<next>
select HTTP from the pulldown menu
set "Display locally" checkbox
<next>
click on the "Create a new profile" botton on the right side

backtrace with vlc.git#master snapshots from end of January 2022, such as 950c019b

Program terminated with signal SIGSEGV, Segmentation fault.
#0  0x00007f1774e293d4 in QVLCDialog::setWindowTransientParent (p_intf=0x0, parent=0x0, widget=0x558d9621a7a0) at gui/qt/widgets/native/qvlcframe.cpp:225
225             parent = p_intf->p_compositor->interfaceMainWindow();
[Current thread is 1 (Thread 0x7f175eb93700 (LWP 31210))]
(gdb) bt
#0  0x00007f1774e293d4 in QVLCDialog::setWindowTransientParent (p_intf=0x0, parent=0x0, widget=0x558d9621a7a0)
    at gui/qt/widgets/native/qvlcframe.cpp:225
#1  QVLCDialog::QVLCDialog (this=0x558d9621a7a0, parent=0x0, _p_intf=0x0) at gui/qt/widgets/native/qvlcframe.cpp:242
#2  0x00007f1774cdc4d9 in VLCProfileEditor::VLCProfileEditor (this=0x558d9621a7a0, qs_name=..., value=..., _parent=<optimized out>)
    at gui/qt/dialogs/sout/profile_selector.cpp:428
#3  0x00007f1774ce1e3d in VLCProfileSelector::editProfile (this=this@entry=0x558d96176dd0, qs=..., value=...)
    at gui/qt/dialogs/sout/profile_selector.cpp:145
#4  0x00007f1774ce2039 in VLCProfileSelector::newProfile (this=0x558d96176dd0) at gui/qt/dialogs/sout/profile_selector.cpp:133
#5  0x00007f1771c2feb5 in QMetaObject::activate (sender=sender@entry=0x558d96180a10, signalOffset=<optimized out>,
    local_signal_index=local_signal_index@entry=2, argv=argv@entry=0x7f175eb90c20) at kernel/qobject.cpp:3804
#6  0x00007f1771c305c7 in QMetaObject::activate (sender=sender@entry=0x558d96180a10,
    m=m@entry=0x7f1773364640 <QAbstractButton::staticMetaObject>, local_signal_index=local_signal_index@entry=2,
    argv=argv@entry=0x7f175eb90c20) at kernel/qobject.cpp:3657
#7  0x00007f1772d72ec2 in QAbstractButton::clicked (this=this@entry=0x558d96180a10, _t1=<optimized out>)
    at .moc/moc_qabstractbutton.cpp:312
#8  0x00007f1772d730da in QAbstractButtonPrivate::emitClicked (this=0x558d9617a1a0) at widgets/qabstractbutton.cpp:414
....

Let me know if this is enough to reproduce it on your side.

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information