qt: fix window parenting of nested modal dialogs

windowHandle() may return null if the current widget is not the window widget

fix: #26578